<resources>
    <string name="app_name">Care COVID-19</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Myanmar</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_international">International</string>
    <string name="app_coronavirus_pandemic">CORONAVIRUS PANDEMIC</string>
    <string name="app_covid_19_live_count">COVID-19 LIVE COUNT</string>
    <string name="app_total_cases">TOTAL CASES</string>
    <string name="app_total_deaths">TOTAL DEATHS</string>
    <string name="app_total_recovered">TOTAL RECOVERED</string>
    <string name="app_country_myanmar">Myanmar</string>
    <string name="app_cases">Cases</string>
    <string name="app_deaths">Deaths</string>
    <string name="app_recovered">Recovered</string>
    <string name="app_cases_v2">Cases</string>
    <string name="app_deaths_v2">Deaths</string>
    <string name="app_recovered_v2">Recovered</string>
    <string name="app_territories">TERRITORIES</string>
    <string name="app_add_preferred">Set as preferred country</string>
    <string name="app_protect_yourself_and_others_from_getting_sick">Protect yourself and others from getting sick</string>
    <string name="app_stay_healthy_while_travelling">Stay healthy while travelling</string>
    <string name="app_how_to_use_mask">How to use mask</string>
    <string name="app_how_to_handrub_handwash">How to Handrub? How to Handwash?</string>
    <string name="app_how_covid_19_spread">How COVID-19 spread?</string>
    <string name="app_role_to_protect_ourselves_and_others">Role to protect ourselves and others</string>
    <string name="app_tips">Tips</string>
    <string name="app_loading">Loading</string>
    <string name="app_cannot_get_data">Unable to retrieve the data.\nPlease try again later.</string>
    <string name="app_choose_language">Choose your language</string>
    <string name="app_use">Use</string>
    <string name="app_settings">Settings</string>
    <string name="setting_language">Language</string>
    <string name="app_unicode" translatable="false">မြန်မာ (Unicode)</string>
    <string name="app_zawgyi" translatable="false">ျမန္မာ (Zawgyi)</string>
    <string name="app_english" translatable="false">English</string>
    <string name="app_cancel">Cancel</string>
    <string name="app_ok">OK</string>
    <string name="app_open_fb">View</string>
    <string name="setting_about">About</string>
    <string name="setting_about_this_app">About this app</string>
    <string name="app_developer">Developer:</string>
    <string name="app_version">Version:</string>
    <string name="app_data_ref">Data Ref:</string>
    <string name="app_search_country">Search country</string>
    <item name="ctx_menu_add_preferred" type="id" />
    <string name="app_map">Map</string>
    <string name="app_map_suspected">Suspected</string>
    <string name="app_map_confirmed">Confirmed</string>
    <string name="app_map_deaths">Deaths</string>
    <string name="app_map_recovered">Recovered</string>
    <string name="app_map_pui">PUI</string>
    <string name="app_map_township">Township</string>
    <string name="app_map_pending">Lab Pending</string>
    <string name="app_update_available">App Update Available!</string>
    <string name="app_maintenance_message">Server is under maintenance for better app experience. Please try again later.</string>
    <string name="app_maintenance_title">Server Maintenance</string>
    <string name="app_download">Download</string>
    <string name="app_mminfo_pui">PUI</string>
    <string name="app_mminfo_suspected">Suspected</string>
    <string name="app_mminfo_confirm">Confirmed</string>
    <string name="app_mminfo_lab_neg">Lab Negative</string>
    <string name="app_mminfo_lab_pending">Lab Pending</string>
    <string name="app_mminfo_pui_sus">PUI &amp; Suspected</string>
    <string name="app_mminfo_lab_deaths">Deaths</string>
    <string name="app_for_today">Latest information for today</string>
    <string name="app_information_received_label">Above are the information received at\n%s</string>
    <string name="app_view_details_mohs">View details at official MOHS facebook page</string>
</resources>
