<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_international"
        android:icon="@drawable/ic_baseline_language_24"
        android:title="@string/title_international" />

    <item
        android:id="@+id/navigation_tips"
        android:icon="@drawable/ic_check_box_black_24dp"
        android:title="@string/app_tips" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_place_black_24dp"
        android:title="@string/app_map" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/app_settings" />

</menu>
