<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">
    <RadioButton android:id="@+id/radio_mm_unicode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/app_unicode"/>
    <RadioButton android:id="@+id/radio_mm_zawgyi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_zawgyi"/>

    <RadioButton android:id="@+id/radio_eng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_english"/>

</RadioGroup>