<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="tech.minthura.carecovid.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_tips"
        android:name="tech.minthura.carecovid.ui.tips.TipsFragment"
        android:label="@string/app_tips"
        tools:layout="@layout/fragment_tips" >
        <action
            android:id="@+id/action_navigation_tips_to_details_fragment"
            app:destination="@id/image_list_fragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="tech.minthura.carecovid.ui.settings.SettingsFragment"
        android:label="@string/app_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/image_list_fragment"
        android:name="tech.minthura.carecovid.ui.postdetail.PostDetailFragment"
        android:label="@string/app_tips"
        tools:layout="@layout/fragment_post_details" />
    <fragment
        android:id="@+id/navigation_map"
        android:name="tech.minthura.carecovid.ui.map.MapFragment"
        android:label="@string/app_map"
        tools:layout="@layout/fragment_map" />
</navigation>
