<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tech.minthura.carecovid.ui.map.MapFragment">
    <com.google.android.gms.maps.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="?attr/actionBarSize"
        android:scrollbars="none"
        android:layout_gravity="bottom">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardUseCompatPadding="true"
                card_view:cardBackgroundColor="@color/colorPrimary"
                card_view:cardCornerRadius="2dp"
                card_view:contentPadding="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:text="@string/app_mminfo_pui_sus"/>
                    <TextView
                        android:id="@+id/app_mminfo_pui_sus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="21sp"
                        android:text="0"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardUseCompatPadding="true"
                card_view:cardBackgroundColor="@color/colorPrimary"
                card_view:cardCornerRadius="2dp"
                card_view:contentPadding="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:text="@string/app_mminfo_pui"/>
                    <TextView
                        android:id="@+id/app_mminfo_pui"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="21sp"
                        android:text="0"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardUseCompatPadding="true"
                card_view:cardBackgroundColor="@color/colorPrimary"
                card_view:cardCornerRadius="2dp"
                card_view:contentPadding="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:text="@string/app_mminfo_suspected"/>
                    <TextView
                        android:id="@+id/app_mminfo_suspected"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="21sp"
                        android:text="0"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardUseCompatPadding="true"
                card_view:cardBackgroundColor="@color/colorPrimary"
                card_view:cardCornerRadius="2dp"
                card_view:contentPadding="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:text="@string/app_mminfo_confirm"/>
                    <TextView
                        android:id="@+id/app_mminfo_confirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textAlignment="center"
                        android:textColor="@color/colorWarning"
                        android:textSize="21sp"
                        android:text="0"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardUseCompatPadding="true"
                card_view:cardBackgroundColor="@color/colorPrimary"
                card_view:cardCornerRadius="2dp"
                card_view:contentPadding="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:text="@string/app_mminfo_lab_neg"/>
                    <TextView
                        android:id="@+id/app_mminfo_lab_neg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="21sp"
                        android:text="0"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardUseCompatPadding="true"
                card_view:cardBackgroundColor="@color/colorPrimary"
                card_view:cardCornerRadius="2dp"
                card_view:contentPadding="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:text="@string/app_mminfo_lab_pending"/>
                    <TextView
                        android:id="@+id/app_mminfo_lab_pending"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="21sp"
                        android:text="0"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardUseCompatPadding="true"
                card_view:cardBackgroundColor="@color/colorPrimary"
                card_view:cardCornerRadius="2dp"
                card_view:contentPadding="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:text="@string/app_mminfo_lab_deaths"/>
                    <TextView
                        android:id="@+id/app_mminfo_lab_deaths"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textAlignment="center"
                        android:textColor="@color/colorFailure"
                        android:textSize="21sp"
                        android:text="0"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </HorizontalScrollView>
</FrameLayout>