<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    card_view:cardUseCompatPadding="true"
    card_view:cardCornerRadius="2dp"
    card_view:contentPadding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5"
        android:gravity="center_vertical">
        <LinearLayout
            android:layout_weight="4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/img_flag"
                android:layout_width="64dp"
                android:layout_height="50dp"
                android:src="@drawable/mm"/>
            <TextView
                android:id="@+id/txt_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryTextColor"
                android:textSize="16sp"
                android:gravity="center"
                android:text="@string/app_country_myanmar"/>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/secondaryTextColor"
                            android:textSize="12sp"
                            android:gravity="right"
                            android:text="@string/app_cases"/>
                        <TextView
                            android:id="@+id/txt_cases"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primaryTextColor"
                            android:textSize="20sp"
                            android:gravity="right"
                            android:text="23342"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/secondaryTextColor"
                            android:textSize="12sp"
                            android:gravity="right"
                            android:text="@string/app_deaths"/>
                        <TextView
                            android:id="@+id/txt_deaths"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primaryTextColor"
                            android:textSize="20sp"
                            android:gravity="right"
                            android:text="2345"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/secondaryTextColor"
                            android:textSize="12sp"
                            android:gravity="right"
                            android:text="@string/app_recovered"/>
                        <TextView
                            android:id="@+id/txt_recovered"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primaryTextColor"
                            android:textSize="20sp"
                            android:gravity="right"
                            android:text="2"/>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>